--- a/index.html
+++ b/index.html
@@ -1156,11 +1156,11 @@ function goToJobScreen() {
   showScreen('jobScreen');
 }
    
-    async function handleResumeUpload(event) {
+async function handleResumeUpload(event) {
   const file = event.target.files[0];
   if (!file) return;
 
-  const statusEl = document.getElementById('resumeStatus');
+  const statusEl = document.getElementById('resumeStatus');  // MOVE THIS HERE (top)
   const extractBtn = document.getElementById('extractResumeBtn');
   
   statusEl.textContent = '⏳ Reading resume...';
@@ -1185,11 +1185,9 @@ function goToJobScreen() {
     statusEl.innerHTML = `<span class="spinner"></span> Extracting data...`;
     
     // AUTO-EXTRACT after file loads
-// AUTO-EXTRACT after file loads
-const statusEl = document.getElementById('resumeStatus');
-await extractResumeData();
-statusEl.innerHTML = `✅ Data extracted from <strong>${file.name}</strong>!`;    
-    // Success message shown by extractResumeData()
+    await extractResumeData();
+    
+    statusEl.innerHTML = `✅ Data extracted from <strong>${file.name}</strong>!`;
   } catch (error) {
     console.error('Error reading resume:', error);
     statusEl.textContent = '❌ Error reading file. Try again.';
