--- a/index.html
+++ b/index.html
@@ -1382,8 +1382,9 @@ button.innerHTML = '<span class="spinner-big"></span> Extracting...';      butto
 
         if (extracted.jobTitle) document.getElementById('jobTitle').value = extracted.jobTitle;
         if (extracted.company) document.getElementById('company').value = extracted.company;
-        if (extracted.baseSalary) document.getElementById('baseSalary').value = extracted.baseSalary;
-        if (extracted.equity) document.getElementById('equity').value = extracted.equity;
+if (extracted.baseSalary && extracted.baseSalary !== 'TBD') {
+  document.getElementById('baseSalary').value = extracted.baseSalary;
+}        if (extracted.equity) document.getElementById('equity').value = extracted.equity;
         if (extracted.bonus) document.getElementById('bonus').value = extracted.bonus;
         if (extracted.hoursPerWeek) document.getElementById('hoursPerWeek').value = extracted.hoursPerWeek;
         if (extracted.workEnv) document.getElementById('workEnv').value = extracted.workEnv;
@@ -1638,8 +1639,7 @@ function getSalaryData(jobTitle) {
 
        <div class="salary-data">
   <h3>📈 Market Data for ${job.jobTitle}</h3>
-<p><strong>Your offer:</strong> ${job.baseSalary ? '$' + job.baseSalary.toLocaleString() : 'Salary not disclosed'}</p>  <p><strong>Market range:</strong> ${salaryData.low.toLocaleString()} - ${salaryData.high.toLocaleString()}</p>
-  <p><strong>Your position:</strong> ${percentile}th percentile (${percentile < 30 ? 'below' : percentile < 70 ? 'at' : 'above'} market)</p>
+<p><strong>Your offer:</strong> ${job.baseSalary === 'TBD' ? 'Salary not disclosed' : job.baseSalary ? '$' + job.baseSalary.toLocaleString() : 'Salary not disclosed'}</p>  <p><strong>Your position:</strong> ${percentile}th percentile (${percentile < 30 ? 'below' : percentile < 70 ? 'at' : 'above'} market)</p>
   <p style="font-size: 12px; color: #909090; margin-top: 12px;">📊 Data source: ${salaryData.source || 'Industry estimates'}</p>
   ${job.equity ? `<p><strong>Equity:</strong> ${job.equity}</p>` : ''}
   ${job.bonus ? `<p><strong>Bonus:</strong> ${job.bonus}</p>` : ''}
